frontend/global.css
.body-container {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.header-element {
    flex: none;
}

.body-element {
    flex: 1;
    position: relative;
    overflow-y: auto;
}

.header-breadcrumb {
  margin-bottom: 0;
}

.filter-group {
    padding: 20px;
}

.row {
    margin-top: 1rem;
}

.graph {
    cursor: pointer;
}

.large-graph-container {
    width: 100%;
    height: 240px;
    margin: auto;
}

.loading-widget {
    height: 200px;
    font-size: 20px;
}

html, body, #root {
    overflow: hidden;
    height: 100%;
    margin: 0;
    font-size: 14px;
}

.missioncontrol-navbar {
  justify-content: left;
}

.missioncontrol-card {
    cursor: pointer;
    width: 300px;
}

.missioncontrol-card .card-body {
    padding: 1rem 0.5rem;
}

.missioncontrol-card:hover {
    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.37);
    transition: box-shadow 0.28s cubic-bezier(0.4,0,0.2,1);
}

.buildid-list {
  padding-left: 18px;
}

.buildid-list dd {
  margin-bottom: 0px;
}

.buildid-link {
  cursor: pointer;
  margin-bottom: 0;
}

.buildid-link button {
  padding: 0;
  font-size: 0.9rem;
  line-height: 1.0;
}

.buildid-link:hover {
  color: #0056b3;
}

.summary-tooltip {
  max-width: 600px;
}

.summary-options {
  width: 100%;
}

.summary-buttons {
  padding: 20px;
}

.channel-summary {
  text-align: center;
  padding: 20px;
}

.channel-summary-score {
  font-size: 5.0rem;
  font-weight: bold;
}

.channel-summary-title {
  margin-bottom: -12px;
  font-size: 1rem;
  font-weight: 300 !important;
}

.channel-summary-copy-button {
  position: absolute;
  margin-left: 20px;
  margin-top: 40px;
}

.summary-rate {
  font-size: 2.5rem;
  font-weight: bold;
  text-align: center;
}

.summary-table {
  font-size: 12px;
  border-top: none;
}

.summary-table td {
  border-top: none;
}

.release-selector {
  padding: 20px;
  cursor: pointer;
}

.release-selector .channel-icon {
  padding: 4px;
}

